Update image paths in protection-pme.html

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -112,7 +112,7 @@
     <!-- IMAGE 1 : illustration "trop petit pour être attaqué" -->
     <figure class="article-image" id="image-trop-petit"
             style="text-align:center; margin:20px 0;">
-      <img src="../../assets/petit.png"
+      <img src="/img/petit.png"
            alt="Illustration d’un dirigeant de PME qui pense être trop petit pour intéresser les cybercriminels"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
@@ -167,7 +167,7 @@
     <!-- IMAGE 2 : cambrioleur attiré par un bien précieux -->
     <figure class="article-image" id="image-voleur-attractif"
             style="text-align:center; margin:20px 0;">
-      <img src="../../assets/cambrioleur.png"
+      <img src="/img/cambrioleur.png"
            alt="Illustration d’un cambrioleur dont le regard est attiré par un bien précieux visible"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
