Refine introduction section styling and text alignment
Updated the introduction section for clarity and alignment.

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -72,10 +72,10 @@
   <section class="terminal-section" id="intro-pme"
            style="text-align:left; margin:24px auto; max-width:900px; background-color:#0d0d0d;
                   color:#e5e7eb; padding:40px 20px; border-radius:12px; border:1px solid #1f2937;">
+   
+    <h2 style="color:#3fb950; text-align:center;">Introduction</h2>
 
-    <h2 style="color:#3fb950;">Introduction</h2>
-
-    <p style="font-size:1.1em; line-height:1.7;">
+    <p style="font-size:1.1em; line-height:1.7; text-align:justify;">
       Dans un monde hyperconnecté et globalisé, les petites et moyennes entreprises font face à un double défi :
       se démarquer dans un marché souvent très concurrentiel, tout en protégeant leurs actifs numériques contre
       des menaces en constante évolution. Longtemps perçues comme des cibles secondaires, les PME sont aujourd’hui
