Refactor introduction section in protection-pme.html
Updated HTML structure and styling for the introduction section.

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -73,9 +73,9 @@
            style="text-align:left; margin:24px auto; max-width:900px; background-color:#0d0d0d;
                   color:#e5e7eb; padding:40px 20px; border-radius:12px; border:1px solid #1f2937;">
    
-    <h2 style="color:#3fb950; text-align:center;">Introduction</h2>
+    <h2 style="color:#3fb950; ">Introduction</h2>
 
-    <p style="font-size:1.1em; line-height:1.7; text-align:justify;">
+    <p style="font-size:1.1em; line-height:1.7;">
       Dans un monde hyperconnecté et globalisé, les petites et moyennes entreprises font face à un double défi :
       se démarquer dans un marché souvent très concurrentiel, tout en protégeant leurs actifs numériques contre
       des menaces en constante évolution. Longtemps perçues comme des cibles secondaires, les PME sont aujourd’hui
@@ -113,8 +113,10 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/petit.png"
            alt="Illustration d’un dirigeant de PME qui pense être trop petit pour intéresser les cybercriminels"
-           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+           class="img-reduite"
+           style="border-radius:10px; border:1px solid #3fb95033;">
     </figure>
+
 
     <p style="font-size:1.05em; line-height:1.7;">
       Il s’agit là d’une idée reçue très répandue et très tenace&nbsp;: beaucoup de dirigeants de PME pensent
