Add images to support cybersecurity content
Added images to enhance sections discussing cybersecurity risks and benefits.

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -251,6 +251,14 @@
       « Pourquoi agir, si aucun spécialiste en cybersécurité ne peut me garantir un risque zéro ? »
     </h2>
 
+    <!-- IMAGE 3 :agir ou pas -->
+    <figure class="article-image" id="image-agir"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/agiroupas.png"
+           alt="Illustration d’une personne ne sachant pas si elle doit demarrer son programme"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
+
     <p style="font-size:1.05em; line-height:1.7;">
       C’est vrai&nbsp;: en cybersécurité, <strong>le risque zéro n’existe pas</strong>.
       Mais c’est aussi vrai dans tous les domaines de la vie.
@@ -284,6 +292,14 @@
     <h2 style="color:#3fb950;">
       « Je comprends mieux la nécessité d’un programme, mais j’ai d’autres priorités pour l’instant. »
     </h2>
+
+    <!-- IMAGE 4 : j'ai d'autres priorites -->
+    <figure class="article-image" id="image-priorites"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/priorites.png"
+           alt="Illustration d’une personne qui aimerait avancer mais qui a d'autres priorites"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
 
     <p style="font-size:1.05em; line-height:1.7;">
       Deux éléments conspirent contre la bonne santé de nos systèmes informatiques&nbsp;:
@@ -368,6 +384,13 @@
            style="text-align:left; margin:24px auto; max-width:900px; background-color:#0d0d0d;
                   color:#e5e7eb; padding:40px 20px; border-radius:12px; border:1px solid #1f2937;">
 
+    <!-- IMAGE 5 : benefices -->
+    <figure class="article-image" id="image-benefices"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/benefices.png"
+           alt="Illustration d’une personne souhaitant etre convaincue"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
     <h2 style="color:#3fb950;">
       Quels bénéfices puis-je attendre de la mise en place d’un programme de défense ?
     </h2>
@@ -410,6 +433,14 @@
     <h2 style="color:#3fb950;">
       Vous m’avez convaincu. Par où dois-je commencer ?
     </h2>
+
+    <!-- IMAGE 6: convaincu -->
+    <figure class="article-image" id="image-convaincu"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/convaincu.png"
+           alt="Illustration d’une personne convaincue par les arguments"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
 
     <p style="font-size:1.05em; line-height:1.7;">
       <a href="https://www.cyber.gc.ca/fr/orientation/les-meilleures-mesures-pour-renforcer-la-cybersecurite-des-petites-et-moyennes"
@@ -470,6 +501,14 @@
                   color:#e5e7eb; padding:40px 20px; border-radius:12px; border:1px solid #1f2937;">
 
     <h2 style="color:#3fb950;">Vous êtes prêt à franchir le pas ?</h2>
+
+    <!-- IMAGE 7 : moi -->
+    <figure class="article-image" id="image-moi"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/moi.png"
+           alt="Illustration d’un consultant me ressemblant"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
 
     <p style="font-size:1.05em; line-height:1.7;">
       Actif en technologies de l’information depuis plus de 25 ans, spécialisé en cybersécurité depuis 2022, diplômé
