Fix image source filename case sensitivity

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -505,7 +505,7 @@
     <!-- IMAGE 7 : moi -->
     <figure class="article-image" id="image-moi"
             style="text-align:center; margin:20px 0;">
-      <img src="img/moi.png"
+      <img src="img/Moi.png"
            alt="Illustration d’un consultant me ressemblant"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
