Fix image attributes in protection-pme.html

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -170,6 +170,7 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/cambrioleur.png"
            alt="Illustration d’un cambrioleur dont le regard est attiré par un bien précieux visible"
+           class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
 
@@ -256,6 +257,7 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/agiroupas.png"
            alt="Illustration d’une personne ne sachant pas si elle doit demarrer son programme"
+           class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
 
@@ -298,6 +300,7 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/priorites.png"
            alt="Illustration d’une personne qui aimerait avancer mais qui a d'autres priorites"
+           class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
 
@@ -389,6 +392,7 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/benefices.png"
            alt="Illustration d’une personne souhaitant etre convaincue"
+           class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
     <h2 style="color:#3fb950;">
@@ -438,7 +442,9 @@
     <figure class="article-image" id="image-convaincu"
             style="text-align:center; margin:20px 0;">
       <img src="img/convaincu.png"
+           class="img-reduite"
            alt="Illustration d’une personne convaincue par les arguments"
+           
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
 
@@ -507,6 +513,7 @@
             style="text-align:center; margin:20px 0;">
       <img src="img/Moi.png"
            alt="Illustration d’un consultant me ressemblant"
+           class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
 
