--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -131,7 +131,7 @@
       L’attaquant ne connaît certes pas votre existence, et n’a par conséquent aucune raison de vous attaquer
       spécifiquement. Mais s’il découvre une opportunité de compromettre vos systèmes informatiques, au hasard d’une
       campagne d’envoi massif de courriels de hameçonnage ou d’un scan d’appareils connectés à Internet via des
-      outils spécialisés (par exemple
+      outils spécialisés (Ex: 
       <a href="https://search.censys.io/" target="_blank" rel="noopener noreferrer"><strong>Censys</strong></a> ou
       <a href="https://www.shodan.io/" target="_blank" rel="noopener noreferrer"><strong>Shodan</strong></a>),
       il y a peu de doute sur le fait qu’il cherchera à en tirer profit.
@@ -142,7 +142,15 @@
       ouvertes, le cybercriminel profitera de l’occasion laissée par vos systèmes non protégés pour lancer une
       attaque potentiellement dévastatrice.
     </p>
-
+    <!-- IMAGE 2 : cambrioleur attiré par un bien précieux -->
+    <figure class="article-image" id="image-voleur-attractif"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/cambrioleur.png"
+           alt="Illustration d’un cambrioleur dont le regard est attiré par un bien précieux visible"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
+    
     <div style="background-color:#111; border:1px dashed #3fb95099; border-radius:10px;
                 padding:18px 16px; margin-top:20px;">
       <h3 style="margin-top:0; color:#3fb950;">À retenir</h3>
@@ -165,14 +173,7 @@
       « Pourquoi se donneraient-ils la peine de m’attaquer, au lieu de se concentrer sur des cibles plus rentables ? »
     </h2>
 
-    <!-- IMAGE 2 : cambrioleur attiré par un bien précieux -->
-    <figure class="article-image" id="image-voleur-attractif"
-            style="text-align:center; margin:20px 0;">
-      <img src="img/cambrioleur.png"
-           alt="Illustration d’un cambrioleur dont le regard est attiré par un bien précieux visible"
-           class="img-reduite"
-           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
-    </figure>
+
 
     <p style="font-size:1.05em; line-height:1.7;">
       Les petites structures constituent malheureusement une <strong>cible de choix</strong> pour un cybercriminel.
@@ -210,7 +211,7 @@
           et qu’<strong>une sur cinq n’y avait pas survécu</strong>.
         </li>
         <li>
-          Le <strong>Bureau d’Assurances du Canada</strong> (<a href="https://www.ibc.ca/news-insights/in-focus/small-business-owners%3A-do-you-know-the-full-cost-of-a-cyber-attack"
+          Le Bureau d’Assurances du Canada (<a href="https://www.ibc.ca/news-insights/in-focus/small-business-owners%3A-do-you-know-the-full-cost-of-a-cyber-attack"
              target="_blank" rel="noopener noreferrer"><strong>Insurance Bureau of Canada</strong></a>)
           nous apprend qu’<strong>environ 41&nbsp;% des petites entreprises canadiennes ayant subi une cyberattaque
           ont déclaré un coût d’au moins 100&nbsp;000&nbsp;$ CAD</strong>.
@@ -223,7 +224,7 @@
       <h3 style="margin-top:0; color:#3fb950;">À retenir</h3>
       <ul style="margin:0; padding-left:20px; line-height:1.7;">
         <li>Les attaques contre les petites et moyennes entreprises sont <strong>très majoritairement opportunistes</strong>.</li>
-        <li>Pour le criminel, elles représentent des <strong>gains substantiels pour un effort relativement réduit</strong>.</li>
+        <li>Pour un criminel, elles représentent des <strong>gains substantiels pour un effort relativement réduit</strong>.</li>
         <li>L’impact d’une attaque réussie sur une petite compagnie peut être dramatique (au moins <strong>100&nbsp;000&nbsp;$</strong> de pertes pour 41&nbsp;% des PME canadiennes touchées).</li>
         <li>Une PME sur cinq victime de cyberattaque dans le monde doit déclarer faillite&nbsp;!</li>
       </ul>
@@ -280,7 +281,7 @@
       <strong>réduire la probabilité d’incidents</strong> et
       <strong>d’atténuer leur impact</strong> dans des proportions suffisantes pour
       qu’ils soient considérés comme acceptables.
-      Une PME bien préparée sera capable de détecter plus vite, de réagir plus efficacement
+      Une PME bien préparée sera capable de détecter plus vite une intrusion, de réagir plus efficacement
       et de reprendre ses activités plus rapidement.
     </p>
   </section>
@@ -310,8 +311,8 @@
 
     <ul style="font-size:1.05em; line-height:1.7; padding-left:20px;">
       <li>
-        <strong>Le retour sur investissement en cybersécurité est difficile à visualiser</strong> :
-        son résultat semble moins évocateur pour un décideur qu’un revenu de ventes, un nombre de clients,
+        <strong>Le retour sur investissement en cybersécurité est un exercice délicat</strong>,
+        dont le résultat peut sembler moins évocateur pour un décideur qu’un revenu de ventes, un nombre de clients,
         ou le taux de fréquentation d’une boutique ou d’un site web. S’il est relativement simple de calculer
         un chiffre d’affaires, il sera en revanche bien plus difficile de quantifier un gain réputationnel ou
         l’absence de pertes financières en raison de la présence d’un programme de cybersécurité efficace.
@@ -342,7 +343,7 @@
 
     <ul style="font-size:1.05em; line-height:1.7; padding-left:20px;">
       <li>perte de chiffre d’affaires pour chaque minute d’indisponibilité des systèmes ;</li>
-      <li>amendes réglementaires (par exemple en lien avec la protection des renseignements personnels) ;</li>
+      <li>amendes réglementaires (en lien notamment avec la protection des renseignements personnels) ;</li>
       <li>dommages causés à l’image de la compagnie ;</li>
       <li>
         augmentation des
@@ -358,7 +359,7 @@
     </p>
 
     <p style="font-size:1.05em; line-height:1.7;">
-      Le calcul du coût d’un programme de cybersécurité d’une PME dépendra quant à lui de nombreux facteurs,
+      Le <strong>calcul du coût d’un programme de cybersécurité d’une PME</strong> dépendra quant à lui de nombreux facteurs,
       incluant la taille de la compagnie, le type d’industrie, ou encore la nature de l’infrastructure TI à protéger.
       La description détaillée des nombreux éléments participant à son évaluation dépasse largement le cadre de cet article.
     </p>
@@ -378,6 +379,11 @@
         Ces éléments s’inscrivent dans une réflexion plus large sur le Retour sur Investissement en Sécurité
         (<em>Return Of Security Investment</em> – ROSI).
       </p>
+      <p style="font-size:1.05em; line-height:1.7;">
+        Cet <a href="https://www.techtarget.com/searchsecurity/tip/How-to-calculate-cybersecurity-ROI-for-CEOs-and-boards"
+           target="_blank" rel="noopener noreferrer"><strong>article</strong></a> offre une vision d’ensemble très complète sur le thème du Retour sur Investissement en Sécurité (‘Return Of Security Investment’ - ROSI)
+      </p>      
+      
     </div>
   </section>
   <!-- ===== FIN SECTION 4 ===== -->
@@ -423,7 +429,7 @@
     </ul>
 
     <p style="font-size:1.05em; line-height:1.7; margin-top:12px;">
-      Elle améliorera par ailleurs <strong>son image de marque</strong> et le niveau de confiance de ses clients et partenaires,
+      Elle améliorera par ailleurs <strong>son image de marque</strong> et le <strong>niveau de confiance</strong> de ses clients et partenaires,
       en montrant son engagement concret pour la sécurité et la confidentialité des données.
     </p>
   </section>
@@ -470,7 +476,7 @@
 
     <p style="font-size:1.05em; line-height:1.7;">
       Ceci fait, les éléments résiduels pourront être corrigés au fil du temps.
-      <strong>La loi de Pareto s’applique aussi en cybersécurité&nbsp;: 20&nbsp;% d’efforts peuvent permettre de couvrir 80&nbsp;% des objectifs</strong>.
+      <strong>La loi de Pareto s’applique aussi en cybersécurité&nbsp;: 20&nbsp;% d’efforts doivent permettre de couvrir 80&nbsp;% des objectifs</strong>.
     </p>
 
     <p style="font-size:1.05em; line-height:1.7;">
@@ -481,7 +487,7 @@
 
     <p style="font-size:1.05em; line-height:1.7;">
       L’inventaire sera le point de départ incontournable de votre programme de cybersécurité, puisqu’il ne vous sera
-      possible de bien défendre que ce que vous connaissez !
+      <strong>possible de bien défendre que ce que vous connaissez!</strong>
     </p>
 
     <p style="font-size:1.05em; line-height:1.7; margin-top:18px;">
@@ -495,7 +501,7 @@
     </p>
 
     <p style="font-size:1.05em; line-height:1.7;">
-      La formation des employés sera donc un élément central de votre programme de cyberdéfense, qu’il conviendra de
+      La <strong>formation des employés</strong> sera donc un élément central de votre programme de cyberdéfense, qu’il conviendra de
       réactualiser régulièrement pour tenir compte des dernières techniques utilisées par les criminels.
     </p>
   </section>
