Enhance contact section and add project link
Added a button to open the project and updated the contact section.

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -576,7 +576,8 @@
       Par une approche transparente et adaptée à vos contraintes, je m’engage à vous aider à sécuriser votre PME,
       un pas à la fois.
     </p>
-
+    <a href="projects/phares/protection-pme.html" style="display:inline-block; margin-top:auto; padding:6px 10px; background-color:#3fb950; color:#ffffff; text-decoration:none; border-radius:4px; font-weight:bold;">Ouvrir le projet</a>
+    <!--
     <div style="text-align:center; margin-top:24px;">
       <a href="mailto:contact@sqltemp.com"
          class="btn"
@@ -585,8 +586,15 @@
         ✉️ Me contacter : contact@sqltemp.com
       </a>
     </div>
-
-    <div style="text-align:right; margin-top:20px;">
+    -->
+    <div style="text-align:center; margin-top:24px;">
+      <a href="mailto:contact@sqltemp.com"
+         class="btn"
+         style="display:inline-block; margin-top:auto; padding:6px 10px; background-color:#3fb950; color:#ffffff; text-decoration:none; border-radius:4px; font-weight:bold;">
+        ✉️ Me contacter : contact@sqltemp.com
+      </a>
+    </div>
+    <div style="text-align:center; margin-top:20px;">
       <a href="/articles/" class="btn"
          style="color:#3fb950; text-decoration:none; font-weight:600;">
         ← Retour aux articles
