Refine content and update navigation links
Removed redundant text and updated button links.

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -57,14 +57,9 @@
     </h1>
     <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
       Comment aider les petites et moyennes entreprises à bâtir un programme de cybersécurité réaliste,
-      efficace, et adapté à leurs moyens – sans attendre d’être la prochaine victime.
+      efficace, adapté à leurs moyens.
     </p>
 
-    <hr style="border:0; border-top:1px solid #1f2937; margin:30px auto; width:60%;">
-
-    <div style="margin-top:10px;">
-      <nav class="breadcrumb"><a href="/portfolio/">← Accueil</a></nav>
-    </div>
   </section>
   <!-- ===== FIN ENTÊTE ===== -->
 
@@ -576,7 +571,6 @@
       Par une approche transparente et adaptée à vos contraintes, je m’engage à vous aider à sécuriser votre PME,
       un pas à la fois.
     </p>
-    <a href="projects/phares/protection-pme.html" style="display:inline-block; margin-top:auto; padding:6px 10px; background-color:#3fb950; color:#ffffff; text-decoration:none; border-radius:4px; font-weight:bold;">Ouvrir le projet</a>
     <!--
     <div style="text-align:center; margin-top:24px;">
       <a href="mailto:contact@sqltemp.com"
@@ -595,9 +589,9 @@
       </a>
     </div>
     <div style="text-align:center; margin-top:20px;">
-      <a href="/articles/" class="btn"
+      <a href="/portfolio/" class="btn"
          style="color:#3fb950; text-decoration:none; font-weight:600;">
-        ← Retour aux articles
+        ← Retour à l'accueil
       </a>
     </div>
   </section>
