Update image captions and add new figure

--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -103,7 +103,7 @@
       « Je suis trop petit, je ne vois pas pourquoi les criminels me cibleraient »
     </h2>
 
-    <!-- IMAGE 2 : cambrioleur attiré par un bien précieux -->
+    <!-- IMAGE 1 : cambrioleur attiré par un bien précieux -->
     <figure class="article-image" id="image-voleur-attractif"
             style="text-align:center; margin:20px 0;">
       <img src="img/cambrioleur.png"
@@ -161,7 +161,14 @@
       « Pourquoi se donneraient-ils la peine de m’attaquer, au lieu de se concentrer sur des cibles plus rentables ? »
     </h2>
 
-
+    <!-- IMAGE 2 : pourquoi m'attaquer -->
+    <figure class="article-image" id="image-pas-rentable"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/pasrentable.png"
+           alt="Illustration d’un entrepreneur se demandant pourquoi on voudrait l'attaquer"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
 
     <p style="font-size:1.05em; line-height:1.7;">
       Les petites structures constituent malheureusement une <strong>cible de choix</strong> pour un cybercriminel.
