--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -86,11 +86,10 @@
       plus une option, mais constitue au contraire un levier essentiel de pérennité et de compétitivité.
     </p>
 
-    <hr style="border:1px solid #1f2937; margin:30px 0;">
-
-    <p style="font-size:1.1em; line-height:1.7; color:#d1d5db;">
+    <p style="font-size:1.1em; line-height:1.7;">
       Mais avant toute chose, commençons par déconstruire certains mythes.
     </p>
+    
   </section>
   <!-- ===== FIN INTRODUCTION ===== -->
 
