--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Projet phare #2 : Formation 101 en cybersécurité</title>
+  <title>Formation 101 en cybersécurité</title>
 
   <!-- Feuille de style globale du site -->
   <link rel="stylesheet" href="../../assets/css/style.css">
@@ -126,23 +126,18 @@
     </div>
 
     <h1>Formation 101&nbsp;: Comprendre les grands enjeux de la cybersécurité</h1>
-    <h2>Renforcer sa culture numérique, adopter des réflexes de prudence et développer une saine paranoïa</h2>
+    <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence, renforcer sa résilience</h2>
 
     <p style="font-size:1.05em; line-height:1.7;">
-      La cybersécurité n’est plus un sujet réservé aux experts. En 2025, les menaces se sont professionnalisées,
-      automatisées et industrialisées. Les PME, les particuliers et même les organisations publiques sont ciblés
-      par des attaques de plus en plus sophistiquées, souvent amplifiées par l’intelligence artificielle et par
-      l’ingénierie sociale.
+      La cybersécurité n’est plus, depuis plusieurs années, un sujet exclusivement réservé aux salons et conférences d'experts. En 2025, les menaces se sont plus que jamais professionnalisées,
+      automatisées et industrialisées. Les PME, les particuliers, les organisations publiques comme privées sont ciblés quotidiennement
+      par des attaques de plus en plus sophistiquées, amplifiées par un recours massif à l’intelligence artificielle.
     </p>
 
     <p style="font-size:1.05em; line-height:1.7;">
-      C’est pour répondre à ces nouveaux enjeux que je propose une formation complète, immersive et accessible,
-      construite autour d’un objectif simple&nbsp;: développer chez chacun une culture de cybersécurité solide,
-      pratique et durable.
-    </p>
-
-    <p style="font-size:1.05em; line-height:1.7;">
-      Et comme j’aime le dire en formation&nbsp;: l’objectif n’est pas d’avoir peur… mais d’adopter une saine paranoïa.
+      C’est pour répondre à ces nouveaux enjeux que je vous propose une formation complète et accessible,
+      construite autour d’un objectif simple&nbsp;: développer une culture de cybersécurité solide,
+      pratique et durable afin de vous aider à mieux vous proteger, au travail comme à la maison.
     </p>
 
     <!-- Encadré : Objectifs de la formation -->
@@ -154,7 +149,7 @@
         <li>Reconnaître les manipulations psychologiques utilisées par les cybercriminels</li>
         <li>Adopter des pratiques simples et efficaces pour se protéger</li>
         <li>Développer des réflexes de vigilance adaptés à la vie personnelle et professionnelle</li>
-        <li>Favoriser le partage d’expérience et la conscience collective au sein d’une équipe</li>
+        <li>Favoriser le partage d’expérience et la prise de conscience collective au sein d’une équipe</li>
       </ul>
     </div>
 
@@ -165,8 +160,8 @@
     </p>
 
     <!-- MODULE 1 -->
-    <h3 class="module-titre">MODULE 1 — Comprendre les enjeux de la cybersécurité en 2025</h3>
-    <p class="module-soustitre">Panorama clair, concret et sans jargon inutile</p>
+    <h3 class="module-titre">MODULE 1 — Etat des lieux en 2025: acteurs et enjeux</h3>
+    <p class="module-soustitre"> Comprendre les enjeux de la cybersécurité en 2025</p>
 
     <p>Dans cette première partie, nous dressons un portrait simple et accessible des menaces actuelles&nbsp;:</p>
     <ul>
@@ -185,7 +180,7 @@
     </p>
 
     <!-- MODULE 2 -->
-    <h3 class="module-titre">MODULE 2 — Initiation au hameçonnage (phishing) et comment s’en défendre</h3>
+    <h3 class="module-titre">MODULE 2 — Initiation au hameçonnage (phishing) et autres techniques d'ingénierie sociale</h3>
     <p class="module-soustitre">Apprendre à reconnaître les signaux faibles</p>
 
     <p>
@@ -214,7 +209,7 @@
     <p><strong>Objectif pédagogique&nbsp;:</strong> apprendre à détecter un piège avant qu’il ne fonctionne.</p>
 
     <!-- MODULE 3 -->
-    <h3 class="module-titre">MODULE 3 — Ingénierie sociale : comprendre les manipulations psychologiques</h3>
+    <h3 class="module-titre">MODULE 3 — Comment développer sa vigilance</h3>
     <p class="module-soustitre">Quand l’attaque vise nos émotions, pas nos ordinateurs</p>
 
     <p>
