--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -126,7 +126,7 @@
     </div>
 
     <h1>Formation 101&nbsp;: Comprendre les grands enjeux de la cybersécurité</h1>
-    <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence, renforcer sa résilience</h2>
+    <h2>Développer sa culture de cybersécurité, adopter des réflexes de prudence et renforcer sa résilience</h2>
 
     <p style="font-size:1.05em; line-height:1.7;">
       La cybersécurité n’est plus, depuis plusieurs années, un sujet exclusivement réservé aux salons et conférences d'experts. En 2025, les menaces se sont plus que jamais professionnalisées,
@@ -135,16 +135,16 @@
     </p>
 
     <p style="font-size:1.05em; line-height:1.7;">
-      C’est pour répondre à ces nouveaux enjeux que je vous propose une formation complète et accessible,
+      C’est pour répondre à ces enjeux que je vous propose une formation complète et accessible,
       construite autour d’un objectif simple&nbsp;: développer une culture de cybersécurité solide,
-      pratique et durable afin de vous aider à mieux vous proteger, au travail comme à la maison.
+      pratique et durable afin de vous aider à mieux vous protéger, au travail comme à la maison.
     </p>
 
     <!-- Encadré : Objectifs de la formation -->
     <div class="encadre">
       <h3>🎯 Objectifs de la formation</h3>
       <ul>
-        <li>Comprendre les grandes menaces cyber en 2025</li>
+        <li>Faire un état des lieux des menaces cyber en 2025</li>
         <li>Détecter les signes de hameçonnage et les arnaques courantes</li>
         <li>Reconnaître les manipulations psychologiques utilisées par les cybercriminels</li>
         <li>Adopter des pratiques simples et efficaces pour se protéger</li>
@@ -165,12 +165,12 @@
 
     <p>Dans cette première partie, nous dressons un portrait simple et accessible des menaces actuelles&nbsp;:</p>
     <ul>
-      <li>Professionnalisation des groupes cybercriminels</li>
-      <li>Utilisation de l’IA pour automatiser les attaques</li>
-      <li>Exploitation des failles humaines plutôt que techniques</li>
-      <li>Attaques ciblant les PME, municipalités et organisations locales</li>
-      <li>Escroqueries financières ultra-personnalisées (fraude au président, faux techniciens, etc.)</li>
-      <li>Importance grandissante de la gestion des mots de passe, MFA et mises à jour</li>
+      <li>L'état des menaces en 2025 en quelques chiffres</li>
+      <li>Pourquoi sommes-nous tous concernés?</li>
+      <li>Qui sont les acteurs en présence?</li>
+      <li>Qu'est-ce qu'un hacker?</li>
+      <li>Quelle différence fondamentale entre un hacker et un criminel?</li>
+      <li>Vos défenseurs</li>
       <li>Risques liés aux appareils personnels (BYOD), aux réseaux domestiques et au télétravail</li>
     </ul>
 
