--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -155,8 +155,7 @@
 
     <h3>🧩 Structure de la formation</h3>
     <p>
-      La formation est divisée en trois grands modules, pensés pour un public non technique et adaptés à un
-      format interactif&nbsp;: présentations courtes, discussions libres, mises en situation et mini-jeux.
+      La formation est divisée en trois modules, conçus pour un public non technique, sous forme de présentations courtes, discussions libres, mises en situation et mini-jeux.
     </p>
 
     <!-- MODULE 1 -->
@@ -181,11 +180,11 @@
 
     <!-- MODULE 2 -->
     <h3 class="module-titre">MODULE 2 — Initiation au hameçonnage (phishing) et autres techniques d'ingénierie sociale</h3>
-    <p class="module-soustitre">Apprendre à reconnaître les signaux faibles</p>
+    <p class="module-soustitre">Apprendre à reconnaître les pièges</p>
 
     <p>
-      Le hameçonnage reste la première porte d’entrée des cyberattaques. Mais la bonne nouvelle&nbsp;: c’est aussi
-      l’une des menaces les plus faciles à prévenir… à condition d’être bien formé.
+      Le hameçonnage reste la première porte d’entrée des cyberattaques. Bien que globalement simple à détecter (les choses changent toutefois très rapidement avec l'avènement de l'IA),
+      il est nécessaire d'adopter une regle stricte en tous temps: toujours analyser et réflechir avant de cliquer.
     </p>
 
     <p>Dans ce module interactif&nbsp;:</p>
