--- a/projects/phares/formation.html
+++ b/projects/phares/formation.html
@@ -155,14 +155,13 @@
 
     <h3>🧩 Structure de la formation</h3>
     <p>
-      La formation est divisée en trois modules, conçus pour un public non technique, sous forme de présentations courtes, discussions libres, mises en situation et mini-jeux.
+      La formation est divisée en trois modules, conçus pour un public non technique, sous forme de présentations courtes, de discussions libres, de mises en situation et de mini-jeux.
     </p>
 
     <!-- MODULE 1 -->
-    <h3 class="module-titre">MODULE 1 — Etat des lieux en 2025: acteurs et enjeux</h3>
-    <p class="module-soustitre"> Comprendre les enjeux de la cybersécurité en 2025</p>
+    <h3 class="module-titre">MODULE 1 — Etat des lieux en 2025: acteurs et enjeux de la cybersécurité </h3>
 
-    <p>Dans cette première partie, nous dressons un portrait simple et accessible des menaces actuelles&nbsp;:</p>
+    <p>Dans cette première partie, nous dressons un portrait des menaces actuelles et des acteurs en présence.&nbsp;:</p>
     <ul>
       <li>L'état des menaces en 2025 en quelques chiffres</li>
       <li>Pourquoi sommes-nous tous concernés?</li>
@@ -170,42 +169,36 @@
       <li>Qu'est-ce qu'un hacker?</li>
       <li>Quelle différence fondamentale entre un hacker et un criminel?</li>
       <li>Vos défenseurs</li>
-      <li>Risques liés aux appareils personnels (BYOD), aux réseaux domestiques et au télétravail</li>
     </ul>
 
-    <p>
-      <strong>But du module&nbsp;:</strong> donner aux participants une vision claire de ce qui les menace réellement,
-      pour qu’ils comprennent que la cybersécurité n’est pas un problème technique, mais un enjeu humain.
-    </p>
 
     <!-- MODULE 2 -->
     <h3 class="module-titre">MODULE 2 — Initiation au hameçonnage (phishing) et autres techniques d'ingénierie sociale</h3>
-    <p class="module-soustitre">Apprendre à reconnaître les pièges</p>
 
     <p>
-      Le hameçonnage reste la première porte d’entrée des cyberattaques. Bien que globalement simple à détecter (les choses changent toutefois très rapidement avec l'avènement de l'IA),
-      il est nécessaire d'adopter une regle stricte en tous temps: toujours analyser et réflechir avant de cliquer.
+      Le second module s'intéresse en détail aux différentes techniques de hameçonnage, première porte d’entrée des cyberattaques. 
+      Il vous permettra d'analyser plusieurs cas, et de tester vos connaissances à l'occasion d'un quizz. 
+      L'objectif de cette section est simple: vous convaincre de la nécéssité d'analyser et de toujours réfléchir avant de cliquer.
     </p>
 
-    <p>Dans ce module interactif&nbsp;:</p>
+    <p>Dans ce module interactif, nous aborderons les points suivants&nbsp;:</p>
     <ul>
       <li>
-        Présentation des différents types de phishing&nbsp;:
+        Présentation des différents types de hameconnage&nbsp;:
         <ul>
-          <li>Email trompeur</li>
+          <li>Email trompeur (phishing)</li>
           <li>SMS/messagerie (smishing)</li>
           <li>Appels téléphoniques (vishing)</li>
-          <li>Arnaques via réseaux sociaux</li>
+          <li>Faux codes QR (quishing)</li>          
+          <li>Arnaques ciblées: spear phishing, whaling</li>
         </ul>
       </li>
       <li>Décryptage d’exemples réels</li>
       <li>Exercices ludiques pour repérer les indices suspects</li>
-      <li>Jeu&nbsp;: «&nbsp;Phish ou Pas Phish&nbsp;?&nbsp;»</li>
-      <li>Discussion ouverte&nbsp;: les participants racontent leurs expériences</li>
-      <li>Bonnes pratiques simples et efficaces</li>
+      <li>Jeu (Quizz)&nbsp;: «&nbsp;Saurez-vous reconnaître les tentatives d'hameçonnage&nbsp;?&nbsp;»</li>
+      <li>Discussion ouverte&nbsp;: partage d'expériences entre participants</li>
     </ul>
 
-    <p><strong>Objectif pédagogique&nbsp;:</strong> apprendre à détecter un piège avant qu’il ne fonctionne.</p>
 
     <!-- MODULE 3 -->
     <h3 class="module-titre">MODULE 3 — Comment développer sa vigilance</h3>
